# StepAway

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: publish.yml
src/: app.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/sys/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: settings.ts  system.ts  updater.ts  utils.ts
src/lib/components/: Dropdown.svelte  TitleBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/overlay/: +page.svelte
