[package]
name = "step-away"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "step_away_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
system-idle-time = "1"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"
windows-sys = { version = "0.61.2", features = ["Win32_System_Power", "Win32_System_Shutdown"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
